Estruturação do <header> no index.html, estilização no style.css e observação do mesmo no README.md

--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <title>LandingPage "Empresa Arquitetura"</title>
     <link rel="stylesheet" href="style.css">
     <script src="index.js"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+    </style>
 </head>
 <body>
+    <header >
+        <h1 id="titleHeader">Tradição em projetos de arquitetura</h1>
+        <p id="paragraphHeader">Arquitetura residencial e comercial. </p>
+    </header>
+      
     
 </body>
 </html>
