Criação do informationalMenu e atualização do arquivo README.md

--- a/index.html
+++ b/index.html
@@ -6,17 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LandingPage "Empresa Arquitetura"</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <script src="index.js"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-    </style>
 </head>
 <body>
     <header >
         <h1 id="titleHeader">Tradição em projetos de arquitetura</h1>
         <p id="paragraphHeader">Arquitetura residencial e comercial. </p>
     </header>
-      
-    
+    <section id="informationalMenu">
+        <div>
+            <h1>850</h1>empreendimentos construídos
+        </div>
+        <div>
+            <h1>40</h1>anos de mercado e experiência
+        </div>
+        <div>
+            <h1>2,000,000m²</h1>em projetos construídos
+        </div>
+    </section>
 </body>
 </html>
