Criação da Section Main, alteração do Header, InformationalMenu, criação da pasta images.

--- a/index.html
+++ b/index.html
@@ -16,16 +16,29 @@
         <h1 id="titleHeader">Tradição em projetos de arquitetura</h1>
         <p id="paragraphHeader">Arquitetura residencial e comercial. </p>
     </header>
-    <section id="informationalMenu">
-        <div>
-            <h1>850</h1>empreendimentos construídos
-        </div>
-        <div>
-            <h1>40</h1>anos de mercado e experiência
-        </div>
-        <div>
-            <h1>2,000,000m²</h1>em projetos construídos
-        </div>
-    </section>
+        <section id="informationalMenu">
+            <div>
+                <p class="numberInformationalmenu"><b>850</b></p><p class="textInformationalmenu">empreendimentos construídos</p>
+            </div>
+            <div>
+                <p class="numberInformationalmenu"><b>40</b></p><p class="textInformationalmenu">anos de mercado e experiência</p>
+            </div>
+                <div>
+                <p class="numberInformationalmenu"><b>2,000,000</b></p><p class="textInformationalmenu">m² em projetos construídos</p>
+            </div>
+        </section>
+        <section id="main">
+            <div>
+                <p id="titleMain"><b>Arquitetos com História e Experiência.</b></p> <br>
+                <p id="textMain">Nós realizamos desde 2002 projetos e gerenciamento de obras.<br>
+                Com mais de 800 projetos e 2.000.000 de m² construídos, tendo<br>
+                como principal proposta transformar em realidade os sonhos de<br>
+                seus clientes, criando projetos personalizados, unindo a tradição<br>
+                e a modernidade em nossos projetos.</p>
+            </div>
+            <div>
+                <img src="./imagens/internalArchitecture.svg" alt="internalArchitecture">
+            </div>              
+        </section>
 </body>
 </html>
