Criação do Form

--- a/index.html
+++ b/index.html
@@ -40,5 +40,14 @@
                 <img src="./imagens/internalArchitecture.svg" alt="internalArchitecture">
             </div>              
         </section>
+    <form action="https://api.sheetmonkey.io/form/sL9pLUJX4ihMn8EgLfjNNg" method="post">
+        <h1>Conheça mais sobre nossos serviços:</h1>
+        <div id="formInput">
+            <input class="input" type="text" placeholder="Nome" name="Name" required />
+            <input class="input" type="email" placeholder="Email" name="Email" required />
+            <input type="hidden" name="Created" value="x-sheetmonkey-current-date-time" />
+            <input id="button" type="submit" value="Fale Conosco" />
+        </div>
+    </form>    
 </body>
 </html>
